--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/tovar
 spring.datasource.username=postgres
-spring.datasource.password=1234
-server.port = 8082
+spring.datasource.password=root
+server.port = 8080
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 #spring.data.rest.base-path=/manzil
 #spring.data.rest.default-page-size=5
+#spring.security.user.password=password
